kubernetes/istio/virtual-service/A-B/orders-virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: orders-virtualservice
  namespace: cloud
spec:
  hosts:
    - orders-microservice-service
  http:
    - match:
        - headers:
            X-type:
              exact: v2
      route:
        - destination:
            host: orders-microservice-service
            subset: v2
            
    - route:
        - destination:
            host: orders-microservice-service
            subset: v1
