kubernetes/istio/virtual-service/A-B/users-virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: users-virtualservice
  namespace: cloud
spec:
  hosts:
    - users-microservice-service
  http:
    - match:
        - headers:
            X-type:
              exact: v2
      route:
        - destination:
            host: users-microservice-service
            subset: v2
          
    - route:
        - destination:
            host: users-microservice-service
            subset: v1
